--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aanbieders/laravel-api",
     "description": "Laravel package to recover information of the Aanbieders.be Comparison service provider, using the Aanbieders API",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "keywords": ["Laravel", "Aanbieders", "API"],
     "homepage": "http://www.aanbieders.be",
     "license": "MIT",
@@ -32,5 +32,5 @@
         }
     },
 
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
