--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
         "everto/aanbieders-api-client": "dev-master"
     },
 
+    "require-dev": {
+        "phpunit/phpunit" : "4.0.*",
+        "mockery/mockery": "0.9.*"
+    },
+
     "autoload": {
         "classmap": [
             "src/migrations"
