--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aanbieders/laravel-api",
     "description": "Laravel package to recover information of the Aanbieders.be Comparison service provider, using the Aanbieders API",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "keywords": ["Laravel", "Aanbieders", "API"],
     "homepage": "http://www.aanbieders.be",
     "license": "MIT",
@@ -19,7 +19,7 @@
 
     "require": {
         "php": ">=5.3.0",
-        "everto/aanbieders-api-client": "dev-master"
+        "everto/aanbieders-api-client": "0.1.*"
     },
 
     "require-dev": {
@@ -37,5 +37,5 @@
         }
     },
 
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
