--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 
     "require": {
         "php": ">=5.3.0",
-        "everto/aanbieders-api-client": "0.1.*"
+        "everto/aanbieders-api-client": "0.1.*",
+        "ixudra/curl": "dev-master"
     },
 
     "require-dev": {
@@ -37,5 +38,5 @@
         }
     },
 
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
