--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
 
     "require": {
         "php": ">=5.3.0",
+        "illuminate/support": "4.1.*",
+        "illuminate/config": "4.1.*",
         "everto/aanbieders-api-client": "0.1.*",
-        "ixudra/curl": "dev-master"
+        "ixudra/curl": "0.1.*"
     },
 
     "require-dev": {
@@ -38,5 +40,5 @@
         }
     },
 
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
