--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
 
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": ">=4.2",
-        "illuminate/config": ">=4.2",
+        "illuminate/support": "4.2.*",
+        "illuminate/config": "4.2.*",
         "everto/aanbieders-api-client": "0.1.*",
         "ixudra/curl": "0.1.*"
     },
