--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     ],
 
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.4.0",
         "illuminate/support": "4.2.*",
         "illuminate/config": "4.2.*",
         "everto/aanbieders-api-client": "0.1.*",
-        "ixudra/curl": "0.1.*"
+        "ixudra/curl": "~5.0"
     },
 
     "require-dev": {
