--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aanbieders/laravel-api",
     "description": "Laravel package to recover information of the Aanbieders.be Comparison service provider, using the Aanbieders API",
-    "version": "0.2.2",
+    "version": "1.0.0",
     "keywords": ["Laravel", "Aanbieders", "API"],
     "homepage": "http://www.aanbieders.be",
     "license": "MIT",
@@ -19,22 +19,18 @@
 
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*",
-        "illuminate/config": "4.2.*",
+        "illuminate/support": "~5.0",
+        "illuminate/config": "~5.0",
         "everto/aanbieders-api-client": "0.1.*",
         "ixudra/curl": "~5.0"
     },
 
     "require-dev": {
-        "phpunit/phpunit" : "4.0.*",
-        "mockery/mockery": "0.9.*"
+        "phpunit/phpunit" : "~4.0",
+        "mockery/mockery": "~0.9"
     },
 
     "autoload": {
-        "classmap": [
-            "src/migrations"
-        ],
-
         "psr-0": {
             "Aanbieders\\Api\\": "src/"
         }
